--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
       </div>
     </div>
   </nav>
+  
+  <!-- Search bar -->
+  <div class="container">
+    <div class="row">
+      <div class="col-7">
+        <input type="text" class="form-control" placeholder="Article Search">
+      </div>
+      <div class="col">
+        <a href="#" class="btn">Subscribe</a>
+      </div>
+      <div class="col">
+        <a href="#" class="btn">Topic Request</a>
+      </div>
+    </div>
+  </div>
 
   <!-- Page Content -->
   <div class="container">
