--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </nav>
   
   <!-- Search bar -->
-  <div class="container">
+  <div class="container search-bar">
     <div class="row">
       <div class="col-7">
         <input type="text" class="form-control" placeholder="Article Search">
