--- a/index.html
+++ b/index.html
@@ -49,10 +49,14 @@
   </nav>
   
   <!-- Search bar -->
-  <div class="container search-bar">
+  <div class="search-bar">
+    <div class="container">
     <div class="row">
       <div class="col-7">
         <input type="text" class="form-control" placeholder="Article Search">
+      </div>
+      <div class="col">
+        <button class="btn">Search</button>
       </div>
       <div class="col">
         <a href="#" class="btn">Subscribe</a>
@@ -60,6 +64,7 @@
       <div class="col">
         <a href="#" class="btn">Topic Request</a>
       </div>
+    </div>
     </div>
   </div>
 
