header image; remove sidebar search

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
   <div class="container">
 
     <div class="row">
+      <img src="https://via.placeholder.com/1200x400.png" class="img-fluid" />
+    </div>
+
+    <div class="row">
 
       <!-- Blog Entries Column -->
       <div class="col-md-8">
-
-        <h1 class="my-4">Page Heading
-          <small>Secondary Text</small>
-        </h1>
 
         <!-- Blog Post -->
         <div class="card mb-4">
@@ -136,19 +136,6 @@
 
       <!-- Sidebar Widgets Column -->
       <div class="col-md-4">
-
-        <!-- Search Widget -->
-        <div class="card my-4">
-          <h5 class="card-header">Search</h5>
-          <div class="card-body">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search for...">
-              <span class="input-group-btn">
-                <button class="btn btn-secondary" type="button">Go!</button>
-              </span>
-            </div>
-          </div>
-        </div>
 
         <!-- Categories Widget -->
         <div class="card my-4">
