use spacing classes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </nav>
   
   <!-- Search bar -->
-  <div class="search-bar">
+  <div class="search-bar pt-1 pb-1">
     <div class="container">
     <div class="row">
       <div class="col-7">
@@ -71,7 +71,7 @@
   <!-- Page Content -->
   <div class="container">
 
-    <div class="row">
+    <div class="row mb-2">
       <img src="https://via.placeholder.com/1200x400.png" class="img-fluid" />
     </div>
 
