--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </nav>
   
   <!-- Search bar -->
-  <div class="search-bar pt-1 pb-1">
+  <div class="search-bar pt-2 pb-2">
     <div class="container">
     <div class="row">
       <div class="col-7">
@@ -71,7 +71,7 @@
   <!-- Page Content -->
   <div class="container">
 
-    <div class="row mb-2">
+    <div class="row mb-4 mt-4">
       <img src="https://via.placeholder.com/1200x400.png" class="img-fluid" />
     </div>
 
@@ -96,15 +96,17 @@
 
         <!-- Blog Post -->
         <div class="card mb-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-          <div class="card-body">
-            <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-            <a href="#" class="btn btn-primary">Read More &rarr;</a>
+          <div class="col-4">
+            <img class="card-img-top" src="http://placehold.it/300x300" alt="Card image cap">
           </div>
-          <div class="card-footer text-muted">
+          <div class="col-8">
+            <div class="card-body">
+              <h2 class="card-title">Post Title</h2>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+              <a href="#" class="btn btn-primary">Read More &rarr;</a>
             Posted on January 1, 2017 by
-            <a href="#">Start Bootstrap</a>
+              <a href="#">Start Bootstrap</a>
+            </div>
           </div>
         </div>
 
