--- a/index.html
+++ b/index.html
@@ -81,50 +81,20 @@
       <div class="col-md-8">
 
         <!-- Blog Post -->
-        <div class="card mb-4">
-          <div class="row no-gutters">
+        <div class="card mb-4 p-8">
+          <div class="row">
             <div class="col-md-4">
-              <img class="card-img-top" src="http://placehold.it/300x300" alt="Card image cap">
+              <img class="card-img-top" src="http://placehold.it/225" alt="Card image cap">
             </div>
             <div class="col-md-8">
               <div class="card-body">
+                <p>01.29.19 | Written by: <a href="#">Blogger Smith</a></p>
                 <h2 class="card-title">Post Title</h2>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                <a href="#" class="btn btn-primary">Read More &rarr;</a>
-                Posted on January 1, 2017 by
-                <a href="#">Start Bootstrap</a>
+                <a href="#" class="">Read More &rarr;</a>
+                <p class="mt-4"><a href="#">Government</a> | <a href="#">Retrofit</a> | <a href="#">Door Service</a></p>
               </div>
             </div>
-          </div>
-        </div>
-
-        <!-- Blog Post -->
-        <div class="card mb-4">
-          <div class="col-4">
-            <img class="card-img-top" src="http://placehold.it/300x300" alt="Card image cap">
-          </div>
-          <div class="col-8">
-            <div class="card-body">
-              <h2 class="card-title">Post Title</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-              <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            Posted on January 1, 2017 by
-              <a href="#">Start Bootstrap</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Blog Post -->
-        <div class="card mb-4">
-          <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-          <div class="card-body">
-            <h2 class="card-title">Post Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-            <a href="#" class="btn btn-primary">Read More &rarr;</a>
-          </div>
-          <div class="card-footer text-muted">
-            Posted on January 1, 2017 by
-            <a href="#">Start Bootstrap</a>
           </div>
         </div>
 
