--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
     <div class="row">
 
       <!-- Blog Entries Column -->
-      <div class="col-md-8">
+      <div class="col-md-8 border-right">
 
         <!-- Blog Post -->
         <div class="card mb-4 p-8">
           <div class="row">
             <div class="col-md-4">
-              <img class="card-img-top" src="http://placehold.it/225" alt="Card image cap">
+              <img src="http://placehold.it/225" alt="Card image cap">
             </div>
             <div class="col-md-8">
               <div class="card-body">
