--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
   <div class="container">
 
     <div class="row mb-4 mt-4">
-      <img src="https://via.placeholder.com/1200x400.png" class="img-fluid" />
+      <div class="col-md-12">
+        <img src="https://via.placeholder.com/1200x400.png" class="img-fluid" />
+      </div>
     </div>
 
     <div class="row">
