fix buttons below header

--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
   <div class="search-bar pt-2 pb-2">
     <div class="container">
     <div class="row">
-      <div class="col-7">
+      <div class="col-md-7">
         <input type="text" class="form-control" placeholder="Article Search">
       </div>
-      <div class="col">
+      <div class="col-md-1">
         <button class="btn">Search</button>
       </div>
-      <div class="col">
-        <a href="#" class="btn">Subscribe</a>
+      <div class="col-md-2 text-right">
+        <a href="#" class="btn btn-primary">Subscribe</a>
       </div>
-      <div class="col">
-        <a href="#" class="btn">Topic Request</a>
+      <div class="col-md-2">
+        <a href="#" class="btn btn-primary">Topic Request</a>
       </div>
     </div>
     </div>
@@ -83,7 +83,7 @@
       <div class="col-md-8 border-right">
 
         <!-- Blog Post -->
-        <div class="card mb-4 p-4">
+        <div class="card mb-4 p-4 blog-card">
           <div class="row">
             <div class="col-md-5">
               <img src="http://placehold.it/270" alt="Card image cap">
