--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 
     <div class="row mb-4 mt-4">
       <div class="col-md-12">
-        <img src="https://via.placeholder.com/1200x400.png" class="img-fluid" />
+        <img src="https://via.placeholder.com/1140x340.png" class="img-fluid" />
       </div>
     </div>
 
     <div class="row">
 
       <!-- Blog Entries Column -->
-      <div class="col-md-8 border-right">
+      <div class="col-md-8 border-right pr-4">
 
         <!-- Blog Post -->
         <div class="card mb-4 p-4 blog-card">
@@ -113,7 +113,30 @@
       </div>
 
       <!-- Sidebar Widgets Column -->
-      <div class="col-md-4">
+      <div class="col-md-4 pl-4">
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+              Default checkbox
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+              Default checkbox
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+              Default checkbox
+            </label>
+          </div>
+        </div>
+      </div>
 
         <!-- Categories Widget -->
         <div class="card my-4">
